[gd_scene load_steps=5 format=3 uid="uid://dcc6ib4he2d4n"]

[ext_resource type="Script" path="res://enemy.gd" id="1_5e1t1"]
[ext_resource type="AudioStream" uid="uid://bcixvyv4akux6" path="res://ExplosionGood.wav" id="2_ftbf3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_urb00"]
radius = 31.4006

[sub_resource type="CircleShape2D" id="CircleShape2D_wjaqe"]
radius = 11.0

[node name="Enemy" type="Node2D"]
script = ExtResource("1_5e1t1")

[node name="AvoidDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AvoidDetector"]
shape = SubResource("CircleShape2D_urb00")

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 132
collision_mask = 4098

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource("CircleShape2D_wjaqe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ftbf3")
volume_db = -10.0

[connection signal="area_entered" from="AvoidDetector" to="." method="_on_avoid_detector_area_entered"]
[connection signal="area_exited" from="AvoidDetector" to="." method="_on_avoid_detector_area_exited"]
[connection signal="area_entered" from="BodyArea" to="." method="_on_body_area_area_entered"]
[connection signal="area_exited" from="BodyArea" to="." method="_on_body_area_area_exited"]
